# video-content-description-VCD

./: .gitignore  .gitmodules  LICENSE  README.md  install_local_vcd.bat  setup.py  update_version.py
converters/kittiConverter/: converter.py
converters/lyftConverter/: converter.py
converters/mapillaryConverter/: config.json  convert_mapillary.py  converter.py  test_mapillary_RS6.py  test_mapillary_SRF6.py
converters/nuScenesConverter/: converter.py
converters/towncenterConverter/: converter.py
converters/vcdConverter/: converter.py
cpp/: CMakeLists.txt  README.md  VCD.cmake.in  VCD.cmake.release.in  setup_strings.h.in
cpp/cmake_modules/: CMake_compilation_config.cmake
cpp/modules/: CMakeLists.txt
cpp/modules/vcd_core/: CMakeLists.txt
cpp/modules/vcd_core/cmake/: vcd_coreConfig.cmake.in
cpp/modules/vcd_core/include/: core_exp.h  utils.h  vcd.h  vcd_types.h
cpp/modules/vcd_core/src/: utils.cpp  vcd.cpp  vcd_impl.cpp  vcd_impl.h  vcd_poly2d.cpp  vcd_poly2d.h  vcd_types.cpp  vcd_types.h
cpp/samples/sample_include_as_dependency/: CMakeLists.txt  Readme.md
cpp/samples/sample_include_in_external_proj/: CMakeLists.txt  main.cpp
cpp/samples/sample_include_source_code/: CMakeLists.txt  Readme.md  main.cpp
cpp/test/: CMakeLists.txt
cpp/test/test_utils/: test_utils.h
cpp/test/vcd_core/: CMakeLists.txt
cpp/test/vcd_core/test_action_properties/: CMakeLists.txt
cpp/test/vcd_core/test_action_properties/src/: test_action_properties.cpp
cpp/test/vcd_core/test_basic/: CMakeLists.txt
cpp/test/vcd_core/test_basic/src/: main.cpp  test_basic.cpp
cpp/test/vcd_core/test_uuid/: CMakeLists.txt
cpp/test/vcd_core/test_uuid/src/: test_uuid.cpp
doc/: create_pdoc.bat
doc/pdoc/: converter.html  core.html  draw.html  index.html  poly2d.html  proto.html  sanity.html  schema.html  scl.html  serializer.html  types.html  utils.html
draw/: create_graph.py  vcd_draw.py  vcd_draw_bbox.py  vcd_draw_cuboids.py  vcd_draw_fisheye.py  vcd_draw_fisheye_xz1z2.py  vcd_draw_fisheye_xz1z2_radial_poly.py  vcd_draw_kitti_tracking.py  vcd_draw_mesh.py  vcd_draw_nuscenes.py  vcd_draw_orthographic.py  vcd_draw_pinhole.py  vcd_draw_pinhole_1cams_reprojection.py  vcd_draw_pinhole_4cams.py  vcd_draw_pinhole_reprojection.py  vcd_draw_rbbox.py  vcd_draw_towncentre.py
draw/etc/: pinhole_camera.yml
draw/json/: vcd_add_object_debug.json
draw/old/: test_create_search_simple_nopretty.json
draw/png/: vcd_add_object_debug_10000.json
jupyter/tutorial/: 01_From_pose_to_transform.ipynb  01bis_Create_pose_from_Euler_ZYX_and_Z1XZ2.ipynb  02_From_pose_to_transform_opencv_camera.ipynb  03_Poses_from_quaternions.ipynb  04_Projecting_3D_into_images_Woodscape_with_VCD.ipynb  05_Rectifying_images_fisheye.ipynb
nodejs/: .gitignore  README.md  create_package.sh  package-lock.json  package.json  tsconfig.json
nodejs-test/: README.txt  package.json  tsconfig.json  vcd-tester.js  vcd-tester.ts
nodejs/src/: index.ts  vcd.core.ts  vcd.poly2d.ts  vcd.schema.ts  vcd.scl.ts  vcd.ts  vcd.types.ts  vcd.utils.ts
ontologies/: README.md  import_datasets.py  import_to_neo4j.py
ontologies/1.2.0/: Export_complete_ontology_neosemantics.xml  GlobalOntology1.2.0_FE_export.rdf  post_processing.py
ontologies/1.3.0/: GlobalOntology1.3.0_causes.owl
proto/: README.md  json2proto_bin.py  proto_bin2json.py  python_object_from_proto.py
proto/proto_files/: vcd_proto_test.txt
proto/src/: vcd_proto-v4.proto
proto/tests/: nuScenesVCDToProto.py
schema/: openlabel_json_schema-v0.1.0.json  openlabel_json_schema-v0.2.0.json  openlabel_json_schema-v0.3.0.json  openlabel_json_schema-v1.0.0.json  openlabel_schema_json_generator.py  vcd_json_validation-v4.0.0.py  vcd_json_validation-v4.1.0.py  vcd_schema_json-v4.0.0.json  vcd_schema_json-v4.1.0.json  vcd_schema_json-v4.2.0.json  vcd_schema_json-v4.2.1.json  vcd_schema_json-v4.3.0.json  vcd_schema_json-v4.3.1.json  vcd_schema_json_generator-v4.0.0.py  vcd_schema_json_generator-v4.1.0.py  vcd_schema_json_generator-v4.2.0.py  vcd_schema_json_generator-v4.2.1.py  vcd_schema_json_generator.py
tests/: test_action_properties.py  test_basic.py  test_bbox.py  test_config.py  test_converters.py  test_geometries.py  test_image.py  test_mesh.py  test_modify.py  test_openlabel.py  test_openlabel_labeling.py  test_openlabel_tagging.py  test_run_all.py  test_sanity.py  test_scl.py  test_semantics.py  test_serializer.py  test_stream_frame_properties.py  test_uuid.py
tests/etc/: openlabel010_test_create_openlabel.json  openlabel010_test_read_vcd431_file.json  openlabel020_1_attm_03-08_ann.json  openlabel020_kitti_tracking_0003.json  openlabel020_kitti_tracking_0003_actions.json  openlabel020_test_actions_a.json  openlabel020_test_actions_b.json  openlabel020_test_actions_c.json  openlabel020_test_actions_with_action_data.json  openlabel020_test_add_metadata.json  openlabel020_test_contours.json  openlabel020_test_create_openlabel.json  openlabel020_test_create_search_mid_saved.json  openlabel020_test_create_search_simple_nopretty.json  openlabel020_test_create_search_simple_pretty.json  openlabel020_test_cuboids.json  openlabel020_test_element_data_nested_same_name.json  openlabel020_test_element_data_same_name.json  openlabel020_test_image.json  openlabel020_test_intrinsics.json  openlabel020_test_mesh.json  openlabel020_test_mesh_frame.json  openlabel020_test_multi_value_attributes.json  openlabel020_test_nested_object_data.json  openlabel020_test_object_change_from_dynamic_to_static_after.json  openlabel020_test_object_change_from_dynamic_to_static_before.json  openlabel020_test_object_change_from_static_to_dynamic_a_after.json  openlabel020_test_object_change_from_static_to_dynamic_a_before.json  openlabel020_test_object_change_from_static_to_dynamic_b_after.json  openlabel020_test_object_change_from_static_to_dynamic_b_before.json  openlabel020_test_objects_without_data.json  openlabel020_test_ontology.json  openlabel020_test_poses.json  (+220 more)
vcd/: __init__.py  converter.py  core.py  draw.py  poly2d.py  proto.py  sanity.py  schema.py  scl.py  serializer.py  types.py  utils.py
(+235 files in other folders)
